--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -1,35 +1,33 @@
 {
-  "name": "core",
-  "version": "0.1.0",
+  "name": "create-react-app-with-typescript",
+  "version": "3.2.2",
   "private": true,
+  "main": "App.tsx",
   "dependencies": {
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.11.6",
-    "@types/react": "^16.8.8",
-    "@types/react-bootstrap": "^0.32.17",
-    "@types/react-dom": "^16.8.3",
+    "@material-ui/core": "latest",
+    "@material-ui/icons": "^3.0.2",
+    "@types/classnames": "^2.2.7",
+    "@types/react": "*",
+    "@types/react-dom": "*",
     "@types/react-router": "^4.4.5",
-    "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^4.3.1",
-    "bootstrap": "^3.3.7",
-    "react": "^16.0.0]",
-    "react-bootstrap": "^0.31.5",
-    "react-dom": "^16.0.0",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.8",
-    "rimraf": "^2.6.2",
-    "typescript": "^3.3.4000"
-  },
-  "scripts": {
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "classnames": "^2.2.6",
+    "react": "latest",
+    "react-dom": "latest",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "latest"
   },
   "devDependencies": {
-    "ajv": "^6.0.0",
-    "cross-env": "^5.2.0"
+    "@types/jest": "*",
+    "@types/node": "*",
+    "typescript": "latest"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
